# 30DaysBackendChallenge

./: .gitignore  LICENSE  README.md
NYSC/: README.md  index.html
day01-php-login/: README.md  dashboard.php  index.php  login.php  register.php  users.txt
day02-python-url-shortener/: README.md
day03-node-task-api/: README.md  index.js  package.json
day04-go-quotes-api/: README.md  index.html  main.go
day05-ruby-cli-todo/: app.rb  todo.rb  todo_gui.rb  todos.json
day06-file-uploader/: Program.cs  day06-file-uploader.csproj  day06-file-uploader.http  index.html  style.css
day07-bash-backup/: backup.sh
day08-node-jwt-auth/: README.md  app.js  package.json  test-auth.ps1
day09-django-blog/: package.json
day10-laravel-cart-api/: README.md  composer.json  index.php  test.php
day11-go-student-api/: README.md  docker-compose.yml  package.json  record_swagger.js  record_swagger_frames.js
day12-rust-password-manager/: Cargo.toml
day12-rust-password-manager/scripts/: record.sh  record_video.sh
day12-rust-password-manager/src/: crypto.rs  main.rs  models.rs  vault.rs
day13-sql-library-schema/: README.md  schema.sql  seed.sql
day14-java-banking-api/: README.md
day15-payment-gateway-api-nodejs/: README.md  package.json
day16-fastapi-weather/: README.md  main.py  requirements.txt
day17-php-forum-api/: .gitignore  README.md  composer.json  phpunit.xml
day18-go-chat-server/: README.md  client.go  hub.go  hub_test.go  main.go  message.go
day19-rails-event-booking/: Gemfile  README.md  config.ru
day20-csharp-inventory-api/: README.md  build.sh  (+1 more)
(+156 files in other folders)
