[package]
name = "day12-rust-password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4"
dirs = "5"
